# pebble-firmware

./: .gitattributes  .gitignore  .gitlint  .gitmodules  CONTRIBUTING.md  CONTRIBUTING.md.license  LICENSE  README.md  README.md.license  REUSE.toml  crowdin.yml  lcd_definitions.h  pyproject.toml  requirements-brew.txt  waf  wscript
.github/workflows/: build-bootloader.yml  build-firmware.yml  build-prf.yml  build-qemu.yml  build-translation-source.yml  build.yml  crowdin-pull.yml  release.yml  reuse-pr.yml  test.yml
LICENSES/: LicenseRef-PD-2.txt
docs/: Makefile  conf.py  getting_started.md  index.md  porting-bluetooth.md  requirements.txt
docs/development/: qemu.md
platform/: platform_capabilities.py  wscript
python_libs/pbl/: pyproject.toml
python_libs/pbl/pbl/commands/: install_firmware.py
python_libs/pblconvert/: README.rst  pyproject.toml
python_libs/pblprog/: pyproject.toml
python_libs/pebble-commander/: pyproject.toml
python_libs/pebble-loghash/: pyproject.toml
python_libs/pulse2/: pyproject.toml
resources/normal/base/: resource_map.json  resource_map.json.license
resources/normal/base/lang/: REUSE.toml  tintin.pot  wscript
resources/normal/base/lang/ca_ES/: lang_map.json  tintin.po
resources/normal/base/tzdata/: timezones_olson.txt  update_timezones.py
resources/normal/obelix/: resource_map.json
resources/normal/silk/: resource_map.json
sdk/docs/external_refs/: UiFramework.html  UsingResources.html  app-phone-communication.html
src/bluetooth-fw/: wscript
src/bluetooth-fw/nimble/: advert.c  nimble_store.c
src/bluetooth-fw/nrf52/: adv_reconnect.c  advert.c  id.c  init.c
src/fw/: freertos_application.c  fw_common.ld  irq_sf32lb.def  main.c  mcu.h  sf32lb_em525_flash_fw.ld.template  vector_table.c  wscript
src/fw/applib/: applib_malloc.json  platform.h  wscript
src/fw/applib/app_sync/: app_sync.h
src/fw/applib/graphics/: gdraw_command_image.c  gdraw_command_image.h  gdraw_command_sequence.c  gdraw_command_sequence.h
src/fw/applib/ui/: menu_layer.c  menu_layer.h  option_menu_window.c  option_menu_window.h
src/fw/apps/demo_apps/: timeline_pins_demo.c
src/fw/apps/system_apps/: hrm_demo.c  notifications_app.c  watchfaces.c
src/fw/board/: board.h  board_definitions.h  board_sf32lb.h  display.h  wscript_build
src/fw/board/boards/: board_asterix.h  board_em_lb525.c  board_em_lb525.h  board_obelix.c  board_obelix.h  board_obelix_bb.c  board_obelix_bb.h  board_robert.c  board_robert.h  board_silk.c  board_silk.h
src/fw/comm/ble/: gap_le_slave_discovery.c
src/fw/console/: dbgserial_input.c  prompt_commands.c  prompt_commands.h
src/fw/debug/: setup.c
src/fw/debug/default/: flash_logging.c
src/fw/drivers/: adc.h  exti.h  exti.inl.h  gpio.h  i2c.c  i2c.h  i2c_definitions.h  i2c_hal.h  ioexp.h  ioexp_aw9527.c  mpu.c  otp.h  pwm.h  task_watchdog.c  vibe_aw86225.c  voltage_monitor.h  wscript_build
src/fw/drivers/als/: als.h  als_null.c  als_w1160.c  stk_alps_lib.h
src/fw/drivers/battery/: battery_obelix.c  battery_obelix_bb.c  charger_eta4662.c  charger_eta4662.h
src/fw/drivers/flash/: sf32lb52_int_flash.c
src/fw/drivers/hrm/: as7000.c  as7000.h
src/fw/drivers/imu/: imu_obelix_bb.c
src/fw/drivers/nrf5/: otp.c
src/fw/drivers/sf32lb/: adc.c  adc.h  adc_hal_definitions.h  exti.c  gpio.c  i2c.c  i2c.h  i2c_definitions.h  i2c_hal.c  i2c_hal_definitions.h  jdi.c  jdi_definitions.h  pwm.c  pwm_hal.c  pwm_hal_definitions.h  rng.c  rtc.c  uart.c  uart_definitions.h  watchdog.c
src/fw/drivers/stm32f2/: uart.c
src/fw/flash_region/: flash_region.h  flash_region_sf32lb_int.h
src/fw/kernel/: core_dump.c  core_dump_private.h  system_versions.c
src/fw/kernel/util/: delay.c  standby.c  stop.c
src/fw/mfg/: mfg_serials.c
src/fw/mfg/asterix/: mfg_info.c
src/fw/mfg/obelix/: mfg_info.c
src/fw/popups/notifications/: notification_window.c  notification_window_private.h
src/fw/services/: wscript
src/fw/services/common/: ecompass.c  registry_endpoint.c
src/fw/shell/: prefs.h
src/fw/shell/normal/: prefs.c  prefs_values.h.inc  system_app_registry_list.json
src/fw/startup/: startup_sf32lb.c  startup_stm32.c  wscript_build
src/fw/system/: bootbits.c  profiler.c  reboot_reason.c  rtc_registers.h
src/idl/nanopb/: wscript
src/libbtutil/: wscript
src/libos/: wscript
src/libutil/: platform.c  wscript
tests/: wscript
tests/fw/comm/: wscript
tests/fw/graphics/: wscript
tests/fw/pebble_actions/: wscript
tests/fw/services/: wscript
tests/fw/services/bluetooth/: wscript
tests/fw/services/comm_session/: wscript
tests/fw/services/compositor/: wscript
tests/libc/math/: wscript
tools/: app_header.py  mpu_calc.py  pbpack.py  pebble_sdk_platform.py  repack.py  timezones.py  unpack.py
tools/generate_pdcs/: pdc_gen.py  svg2commands.py
tools/pdc2png/: wscript
tools/pdc2png/src/: pdc2png.c
tools/qemu_spi_cooker/: wscript
tools/svg2png/: svg2png.py
tools/tests/: wscript
waftools/: openocd.py  pebble_arm_gcc.py  pebble_test.py  protoc.py
(+96 files in other folders)
