[project]
name = "pebble"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"Pillow",
	"freetype-py",
	"ply==3.4",
	"pyusb==1.0.0b2",
	"pyserial",
	"sh==1.04",
	"pypng",
	"pexpect",
	"cobs==1.0.0",
	"svg.path",
	"requests",
	"GitPython==1.0.1",
	"pyelftools",
	"pycryptodome",
	"mock",
	"nose",
	"boto",
	"prompt-toolkit>=0.55",
	"enum34",
	"bitarray",
	"pep8",
	"polib",
	"intelhex>=2.1,<3",
	"protobuf",
	"grpcio-tools",
	"nanopb",
	"certifi",
	"libclang",
	"packaging",
	"libpebble2>=0.0.16",
	"pyftdi==0.13.4",
	"pathlib",
	
	# Local dependenciues
	"pebble-programmer",
	"pebble-commander",
	"pebble-pulse2",
	"pebble-loghash",
]

[tool.uv.sources]
pebble-programmer = { workspace = true }
pebble-commander = { workspace = true }
pebble-pulse2 = { workspace = true }
pebble-loghash = { workspace = true }
pbl-tool = { workspace = true }

[tool.uv.workspace]
members = [
	"python_libs/*",
]
