[project]
name = "pblconvert"
version = "0.0.2"
description = "Tools to convert files into valid Pebble resources"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
	"lxml",
	"cairosvg",
	"mock",
	"Pillow",
]

[project.scripts]
pblconvert = "pblconvert.pblconvert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pblconvert"]
