[project]
name = "pebble.programmer"
version = "0.0.3"
description = "Pebble Programmer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"intelhex>=2.1,<3",
	"pyftdi==0.13.4",
]

[project.entry-points."pebble.programmer"]
targets = "loader.bin"

[project.scripts]
pblprog = "pebble.programmer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pebble"]
